Query builder enhancements, privileges, reorg
